# backend/models/Review.js
@@ -66,19 +66,19 @@ reviewSchema.statics.calcAverageRatings = async function (siteId) {
   }
 };
 
-// 🌟 [미들웨어] 새 리뷰가 저장(save)된 후 평점 업데이트
-reviewSchema.post('save', function () {
-  // this는 현재 저장된 리뷰 문서를 가리킵니다.
-  // constructor는 모델(Review)을 가리킵니다.
-  this.constructor.calcAverageRatings(this.culturalSite);
-});
+// // 🌟 [미들웨어] 새 리뷰가 저장(save)된 후 평점 업데이트
+// reviewSchema.post('save', function () {
+//   // this는 현재 저장된 리뷰 문서를 가리킵니다.
+//   // constructor는 모델(Review)을 가리킵니다.
+//   this.constructor.calcAverageRatings(this.culturalSite);
+// });
 
-// 🌟 [미들웨어] 리뷰가 수정되거나 삭제된 후 평점 업데이트
-// findOneAndUpdate나 findOneAndDelete가 실행될 때 작동합니다.
-reviewSchema.post(/^findOneAnd/, async function (doc) {
-  if (doc) {
-    await doc.constructor.calcAverageRatings(doc.culturalSite);
-  }
-});
+// // 🌟 [미들웨어] 리뷰가 수정되거나 삭제된 후 평점 업데이트
+// // findOneAndUpdate나 findOneAndDelete가 실행될 때 작동합니다.
+// reviewSchema.post(/^findOneAnd/, async function (doc) {
+//   if (doc) {
+//     await doc.constructor.calcAverageRatings(doc.culturalSite);
+//   }
+// });
 
 module.exports = mongoose.model('Review', reviewSchema);
